src/pages/InnerContainer/AppHead/Playlist/Playlist.scss
@import '../../../../styles/variables.scss';

.playlistWrapper {
  width: 34rem;
  display: block;
  @include app-head-width {
    width: calc(34rem - 5px);
  }
  @include phone {
    width: calc(100% - 7rem);
  }
}

.taskWrapper {
  min-height: 3.5rem;
  max-height: 30rem;
  position: relative;
  overflow: auto;
  overflow: overlay; // Работает только в Chrome. TODO: Скроллбар немного ломает верстку, нужно что-то придумать для остальных браузеров
}

.task {
  // padding: 0.5rem 1rem;
  display: flex;
  flex-wrap: wrap;
  align-items: stretch;
  overflow: hidden;
  min-height: 3.5rem;
  cursor: pointer;
  transition: $transition;
  &:hover {
    transition: $transition;
  }
}

.displayTask {
  color: white;
  height: 100%;
  &:hover {
    background-color: rgba(white, 0.1);
  }
  @include phone {
    width: 100%;
  }
}

.actionButton {
  width: 3.5rem;
  flex-shrink: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: $transition;
  background-color: lighten($color-dark, 5%);
  cursor: pointer;
  svg {
    opacity: 0.6;
    transition: $transition;
    width: 1.5rem;
    height: 1.5rem;
  }
  &:hover {
    background-color: rgba(white, 0.1);
    transition: $transition;
    svg {
      opacity: 1;
      transition: $transition;
    }
  }
  &.locked:hover svg {
    opacity: 0.6;
    transition: $transition;
  }
}

.itemIcon {
  width: 1.5rem;
  height: 1.5rem;
}

.listTask {
  &:hover {
    background-color: rgba(black, 0.05);
    .visibleToggler {
      opacity: 1;
    }
  }
  .actionButton {
    background-color: rgba(black, 0.05);
    &.locked:hover {
      background-color: rgba(black, 0.05);
    }
    &:hover {
      background-color: rgba(black, 0.1);
    }
  }
}

.taskNameWrapper {
  width: calc(100% - 7rem);
  height: 3.5rem;
  flex-grow: 0;
  flex-shrink: 0;
  padding: 0 0.5rem;
  display: flex;
  align-items: center;
  &.title {
    @include phone {
      width: calc(100% - 3.5rem);
      padding: 0 0 0 0.5rem;
    }
  }
  &.currentItem {
    .taskName {
      position: relative;
      padding-left: 20px;
      &:after {
        content: '';
        width: 10px;
        height: 10px;
        border-radius: 50%;
        background-color: $color-green;
        position: absolute;
        top: 1px;
        left: 0;
        @include phone {
          top: 10px;
        }
      }
    }
  }
  .proName {
    max-width: 95px;
    overflow-x: hidden;
    vertical-align: middle;
  }
}

.taskTitle {
  width: 100%;
  @include phone {
    width: calc(100% - 20px);
  }
}

.taskName {
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  > span {
    padding-right: 5px;
    color: gray;
    @include phone {
      display: block;
    }
  }
  @include phone {
    font-size: 14px;
    white-space: normal;
  }
  &.listItem {
    white-space: nowrap;
  }
}

.meta {
  max-width: 100%;
  overflow: hidden;
  opacity: 0.7;
  font-size: 11px;
  margin-bottom: 0.25rem;
  white-space: nowrap;
  text-overflow: ellipsis;
  span {
    display: inline-block;
    & + span {
      border-left: 1px solid rgba(black, 0.3);
      margin-left: 0.3rem;
      padding-left: 0.3rem;
    }
  }
  @include phone {
    display: none;
  }
}

.list {
  z-index: $z-modal-layer;
  position: relative;
  box-shadow: $box-shadow;
  background: white;
  @include phone {
    left: -54px;
    width: calc(100% + 108px);
  }
}

.time {
  width: 3.5rem;
  flex-shrink: 0;
  padding: 0.5rem;
  border-left: 1px solid $color-gray;
  .other {
    font-size: 11px;
    line-height: 1;
    color: gray;
    text-align: center;
    &.exceeded {
      color: $color-red;
    }
  }
  .today {
    font-size: 16px;
    margin-bottom: 0.3rem;
    .input {
      width: 100%;
      background-color: rgba(black, 0.05);
      border: none;
      text-align: center;
      &.editable {
        box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.17);
      }
    }
    .withStatus {
      width: 100%;
      border: none;
      text-align: center;
      &.filled {
        background: lighten($color-dark, 15%);
        color: rgba(white, 0.7);
        box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.17);
        &:focus {
          color: white;
        }
      }
      &.submitted {
        background-color: $color-dark-gray;
        color: rgba(white, 0.9);
        box-shadow: none;
      }
      &.approved {
        background-color: $color-green;
        color: rgba(white, 0.9);
        box-shadow: none;
      }
      &.rejected {
        background-color: $color-light-red;
        color: rgba(white, 0.9);
      }
    }
  }
}

.week {
  display: flex;
  .day {
    flex: 1;
    text-align: center;
    padding: 0.5rem;
    cursor: pointer;
    background-color: lighten($color-dark, 10%);
    color: white;
    transition: $transition;
    display: flex;
    justify-content: center;
    align-items: center;
    &.inactive {
      cursor: default;
    }
    &:hover {
      background-color: $color-dark;
      transition: $transition;
    }
    &.active {
      background-color: $color-green;
    }
    & + .day {
      border-left: 1px solid lighten($color-dark, 20%);
    }
    @include phone {
      min-width: 56px;
      min-height: 36px;
    }
  }
  @include phone {
    flex-shrink: 0;
    overflow-x: scroll;
  }
}

.activity {
  display: flex;
  .time {
    .today {
      margin-bottom: 0;
    }
  }
  .activities {
    display: flex;
    width: calc(100% - 56px);
    .type {
      background-color: aqua;
      flex: 1;
      display: flex;
      position: relative;
      align-items: center;
      justify-content: center;
      text-align: center;
      padding: 0.5rem;
      cursor: pointer;
      background-color: lighten(black, 95%);
      transition: $transition;
      .countBadge {
        position: absolute;
        opacity: 1;
        color: darken(silver, 10%);
        top: -0.25rem;
        right: -0.25rem;
        z-index: 2;
        background: white;
        border-color: silver;
        @include phone {
          top: 0;
        }
      }
      svg {
        width: 16px;
        height: 16px;
        opacity: 0.7;
      }
      &:hover {
        background-color: lighten(black, 90%);
        transition: $transition;
      }
      &.active {
        background-color: lighten(black, 85%);
      }
      @include phone {
        min-width: 56px;
        min-height: 36px;
      }
    }
    @include phone {
      flex-shrink: 0;
      overflow-x: scroll;
    }
  }
}

.countBadge {
  width: 20px;
  height: 20px;
  opacity: 0.7;
  margin-left: 0.25rem;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  vertical-align: middle;
  border-radius: 50%;
  font-size: 10px;
  letter-spacing: -1px;
  border: 1px solid;
}

.locked {
  cursor: auto;
}

.showMore {
  text-align: center;
  border: 1px solid rgba(black, 0.05);
  transition: $transition;
  cursor: pointer;
  &:hover {
    background-color: rgba(black, 0.05);
    transition: $transition;
  }
}

.visibleToggler {
  opacity: 0;
}

.commentToggler,
.visibleToggler {
  color: lighten(black, 50%);
  transition: $transition;
  &.green {
    color: $color-green;
    &:hover {
      color: $color-green;
    }
  }
  &:hover {
    color: lighten(black, 30%);
    transition: $transition;
  }
}

.phoneVisibleToggle {
  display: none;
  padding-bottom: 5px;
  @include phone {
    width: 26px;
    display: inline-block;
    text-align: right;
  }
}

.comment {
  width: 100%;
  display: flex;
  textarea {
    width: calc(100% - 3.5rem);
    height: 3.5rem;
    resize: none;
    border: 1px solid $color-gray;
    border-right: none;
    padding: 0.5rem;
    &::placeholder {
      color: silver;
    }
    &:only-child {
      width: 100%;
    }
  }
  .actionButton {
    background-color: $color-green;
    &.locked:hover {
      background-color: $color-green;
    }
    &:hover {
      background-color: lighten($color-green, 10%);
    }
  }
}

.nothingToShow {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 1rem;
  background-color: rgba(black, 0.05);
}

